2007-03-07 nowel(S2Dao.PHP5-1.2.0-beta2)

    * merge: S2Dao.PHP5-1.1.2 and S2Dao.PHP5-1.2.0-beta2 (rev. 611)
	    * fix: [DAOPHP-8] /*IF */ ... --ELSE ... /*END*/の指定が正しく行われない
	        SQLコメントに特定の文字列を含む羽rメータのバインドが行われない不具合を修正しました。
	    * fix: [DAOPHP-9] timestampによる排他制御時にtimestampフィールドに対しunixtimeが設定される
	        timestamp型のフィールドに対してlongのunix-timestampが設定されるのをdate表記のtimestampへ変更しました。
	    * fix: SQLコメント時の値評価処理を修正しました。
	        SQLコメント(IF Node)時にDTOに設定されていない値が評価された際にNoficeが出るのを修正しました。
	    * update: Copyrightを 'Copyright 2005-2006' から 'Copyright 2005-2007'へ修正しました。

2007-02-09 nowel(S2Dao.PHP5-1.2.0-beta2)

    * modify: S2Dao_CommentReturnTypeFactory, S2Dao_ConstantReturnTypeFactoryの追加
        コメントアノテーション時、及び定数アノテーション時にReturnTypeを出力する処理をAnnotationReaderから分離しました。
        これにより、定数アノテーション時でもBEANは定数DAOはコメントとReturnTypeを利用可能です。
        ReturnTypeFactoryの呼出しのタイミングは各AnnotationReaderにより違います。
        ReturnTypeFactory利用するには、dao.diconに記述してある
        <property name="returnTypeFactory">constant</property>の値を任意のReturnTypeFactoryに変更してください。

2007-02-02 nowel(S2Dao.PHP5-1.2.0-beta2)

    * modify: 定数値S2DAO_PHP5_USE_COMMENTを削除しました。
        コメントアノテーションを利用する場合は、dao.diconファイルに記述してある
        <property name="useCommentAnnotation">false</property>の値をtrueに変更してください。

2007-01-30 nowel(S2Dao.PHP5-1.2.0-beta1)

    * add: S2Dao_SimpleXmlResultSetHandlerを追加しました。
        通常のbeanクラスからXMLデータを出力します。
        このResultSetを利用するにはxmlwriterのextensionを必要とします。
        ex)
            HogeBean
                propertyHoge => 123
                propertyFoo => 456
                propertyBar => FooBean
                    fooPropertyA => aaa
                    fooPropertyB => bbb
        result)
            <?xml version="1.0" encoding="UTF-8"?>
            <root>
                <hogeBean>
                    <propertyHoge>123</propertyHoge>
                    <propertyFoo>123</propertyFoo>
                    <propertyBar>
                        <fooBean>